analisis-lexico-sintactico/calc-sintaxis-pre-proyecto.output
Terminales no usados en la gramática

    EQ
    LE
    GE
    LT
    GT


Gramática

    0 $accept: prog $end

    1 prog: tipo MAIN PA PC LA decls sents LC

    2 tipo: INT
    3     | BOOL
    4     | VOID

    5 decls: decl decls
    6      | decl

    7 decl: tipo VAR PYM

    8 sents: sent sents
    9      | sent
   10      | RETURN e PYM
   11      | RETURN PYM

   12 sent: VAR ASIG e PYM

   13 e: e SUM e
   14  | e MULT e
   15  | e MEN e
   16  | e AND e
   17  | e OR e
   18  | NOT e
   19  | PA e PC
   20  | NRO
   21  | TRUE
   22  | FALSE
   23  | VAR


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TRUE (258) 21
    FALSE (259) 22
    INT (260) 2
    BOOL (261) 3
    VOID (262) 4
    RETURN (263) 10 11
    MAIN (264) 1
    ASIG (265) 12
    SUM (266) 13
    MEN (267) 15
    MULT (268) 14
    AND (269) 16
    OR (270) 17
    NOT (271) 18
    EQ (272)
    LE (273)
    GE (274)
    LT (275)
    GT (276)
    PYM (277) 7 10 11 12
    PA (278) 1 19
    PC (279) 1 19
    LA (280) 1
    LC (281) 1
    NRO <nro> (282) 20
    VAR <id> (283) 7 12 23


No terminales con las reglas donde aparecen

    $accept (29)
        on left: 0
    prog <nodo_val> (30)
        on left: 1
        on right: 0
    tipo <nodo_val> (31)
        on left: 2 3 4
        on right: 1 7
    decls <nodo_val> (32)
        on left: 5 6
        on right: 1 5
    decl <nodo_val> (33)
        on left: 7
        on right: 5 6
    sents <nodo_val> (34)
        on left: 8 9 10 11
        on right: 1 8
    sent <nodo_val> (35)
        on left: 12
        on right: 8 9
    e <nodo_val> (36)
        on left: 13 14 15 16 17 18 19 20 21 22 23
        on right: 10 12 13 14 15 16 17 18 19


Estado 0

    0 $accept: • prog $end

    INT   desplazar e ir al estado 1
    BOOL  desplazar e ir al estado 2
    VOID  desplazar e ir al estado 3

    prog  ir al estado 4
    tipo  ir al estado 5


Estado 1

    2 tipo: INT •

    $default  reduce usando la regla 2 (tipo)


Estado 2

    3 tipo: BOOL •

    $default  reduce usando la regla 3 (tipo)


Estado 3

    4 tipo: VOID •

    $default  reduce usando la regla 4 (tipo)


Estado 4

    0 $accept: prog • $end

    $end  desplazar e ir al estado 6


Estado 5

    1 prog: tipo • MAIN PA PC LA decls sents LC

    MAIN  desplazar e ir al estado 7


Estado 6

    0 $accept: prog $end •

    $default  aceptar


Estado 7

    1 prog: tipo MAIN • PA PC LA decls sents LC

    PA  desplazar e ir al estado 8


Estado 8

    1 prog: tipo MAIN PA • PC LA decls sents LC

    PC  desplazar e ir al estado 9


Estado 9

    1 prog: tipo MAIN PA PC • LA decls sents LC

    LA  desplazar e ir al estado 10


Estado 10

    1 prog: tipo MAIN PA PC LA • decls sents LC

    INT   desplazar e ir al estado 1
    BOOL  desplazar e ir al estado 2
    VOID  desplazar e ir al estado 3

    tipo   ir al estado 11
    decls  ir al estado 12
    decl   ir al estado 13


Estado 11

    7 decl: tipo • VAR PYM

    VAR  desplazar e ir al estado 14


Estado 12

    1 prog: tipo MAIN PA PC LA decls • sents LC

    RETURN  desplazar e ir al estado 15
    VAR     desplazar e ir al estado 16

    sents  ir al estado 17
    sent   ir al estado 18


Estado 13

    5 decls: decl • decls
    6      | decl •

    INT   desplazar e ir al estado 1
    BOOL  desplazar e ir al estado 2
    VOID  desplazar e ir al estado 3

    $default  reduce usando la regla 6 (decls)

    tipo   ir al estado 11
    decls  ir al estado 19
    decl   ir al estado 13


Estado 14

    7 decl: tipo VAR • PYM

    PYM  desplazar e ir al estado 20


Estado 15

   10 sents: RETURN • e PYM
   11      | RETURN • PYM

    TRUE   desplazar e ir al estado 21
    FALSE  desplazar e ir al estado 22
    NOT    desplazar e ir al estado 23
    PYM    desplazar e ir al estado 24
    PA     desplazar e ir al estado 25
    NRO    desplazar e ir al estado 26
    VAR    desplazar e ir al estado 27

    e  ir al estado 28


Estado 16

   12 sent: VAR • ASIG e PYM

    ASIG  desplazar e ir al estado 29


Estado 17

    1 prog: tipo MAIN PA PC LA decls sents • LC

    LC  desplazar e ir al estado 30


Estado 18

    8 sents: sent • sents
    9      | sent •

    RETURN  desplazar e ir al estado 15
    VAR     desplazar e ir al estado 16

    $default  reduce usando la regla 9 (sents)

    sents  ir al estado 31
    sent   ir al estado 18


Estado 19

    5 decls: decl decls •

    $default  reduce usando la regla 5 (decls)


Estado 20

    7 decl: tipo VAR PYM •

    $default  reduce usando la regla 7 (decl)


Estado 21

   21 e: TRUE •

    $default  reduce usando la regla 21 (e)


Estado 22

   22 e: FALSE •

    $default  reduce usando la regla 22 (e)


Estado 23

   18 e: NOT • e

    TRUE   desplazar e ir al estado 21
    FALSE  desplazar e ir al estado 22
    NOT    desplazar e ir al estado 23
    PA     desplazar e ir al estado 25
    NRO    desplazar e ir al estado 26
    VAR    desplazar e ir al estado 27

    e  ir al estado 32


Estado 24

   11 sents: RETURN PYM •

    $default  reduce usando la regla 11 (sents)


Estado 25

   19 e: PA • e PC

    TRUE   desplazar e ir al estado 21
    FALSE  desplazar e ir al estado 22
    NOT    desplazar e ir al estado 23
    PA     desplazar e ir al estado 25
    NRO    desplazar e ir al estado 26
    VAR    desplazar e ir al estado 27

    e  ir al estado 33


Estado 26

   20 e: NRO •

    $default  reduce usando la regla 20 (e)


Estado 27

   23 e: VAR •

    $default  reduce usando la regla 23 (e)


Estado 28

   10 sents: RETURN e • PYM
   13 e: e • SUM e
   14  | e • MULT e
   15  | e • MEN e
   16  | e • AND e
   17  | e • OR e

    SUM   desplazar e ir al estado 34
    MEN   desplazar e ir al estado 35
    MULT  desplazar e ir al estado 36
    AND   desplazar e ir al estado 37
    OR    desplazar e ir al estado 38
    PYM   desplazar e ir al estado 39


Estado 29

   12 sent: VAR ASIG • e PYM

    TRUE   desplazar e ir al estado 21
    FALSE  desplazar e ir al estado 22
    NOT    desplazar e ir al estado 23
    PA     desplazar e ir al estado 25
    NRO    desplazar e ir al estado 26
    VAR    desplazar e ir al estado 27

    e  ir al estado 40


Estado 30

    1 prog: tipo MAIN PA PC LA decls sents LC •

    $default  reduce usando la regla 1 (prog)


Estado 31

    8 sents: sent sents •

    $default  reduce usando la regla 8 (sents)


Estado 32

   13 e: e • SUM e
   14  | e • MULT e
   15  | e • MEN e
   16  | e • AND e
   17  | e • OR e
   18  | NOT e •

    SUM   desplazar e ir al estado 34
    MEN   desplazar e ir al estado 35
    MULT  desplazar e ir al estado 36

    $default  reduce usando la regla 18 (e)


Estado 33

   13 e: e • SUM e
   14  | e • MULT e
   15  | e • MEN e
   16  | e • AND e
   17  | e • OR e
   19  | PA e • PC

    SUM   desplazar e ir al estado 34
    MEN   desplazar e ir al estado 35
    MULT  desplazar e ir al estado 36
    AND   desplazar e ir al estado 37
    OR    desplazar e ir al estado 38
    PC    desplazar e ir al estado 41


Estado 34

   13 e: e SUM • e

    TRUE   desplazar e ir al estado 21
    FALSE  desplazar e ir al estado 22
    NOT    desplazar e ir al estado 23
    PA     desplazar e ir al estado 25
    NRO    desplazar e ir al estado 26
    VAR    desplazar e ir al estado 27

    e  ir al estado 42


Estado 35

   15 e: e MEN • e

    TRUE   desplazar e ir al estado 21
    FALSE  desplazar e ir al estado 22
    NOT    desplazar e ir al estado 23
    PA     desplazar e ir al estado 25
    NRO    desplazar e ir al estado 26
    VAR    desplazar e ir al estado 27

    e  ir al estado 43


Estado 36

   14 e: e MULT • e

    TRUE   desplazar e ir al estado 21
    FALSE  desplazar e ir al estado 22
    NOT    desplazar e ir al estado 23
    PA     desplazar e ir al estado 25
    NRO    desplazar e ir al estado 26
    VAR    desplazar e ir al estado 27

    e  ir al estado 44


Estado 37

   16 e: e AND • e

    TRUE   desplazar e ir al estado 21
    FALSE  desplazar e ir al estado 22
    NOT    desplazar e ir al estado 23
    PA     desplazar e ir al estado 25
    NRO    desplazar e ir al estado 26
    VAR    desplazar e ir al estado 27

    e  ir al estado 45


Estado 38

   17 e: e OR • e

    TRUE   desplazar e ir al estado 21
    FALSE  desplazar e ir al estado 22
    NOT    desplazar e ir al estado 23
    PA     desplazar e ir al estado 25
    NRO    desplazar e ir al estado 26
    VAR    desplazar e ir al estado 27

    e  ir al estado 46


Estado 39

   10 sents: RETURN e PYM •

    $default  reduce usando la regla 10 (sents)


Estado 40

   12 sent: VAR ASIG e • PYM
   13 e: e • SUM e
   14  | e • MULT e
   15  | e • MEN e
   16  | e • AND e
   17  | e • OR e

    SUM   desplazar e ir al estado 34
    MEN   desplazar e ir al estado 35
    MULT  desplazar e ir al estado 36
    AND   desplazar e ir al estado 37
    OR    desplazar e ir al estado 38
    PYM   desplazar e ir al estado 47


Estado 41

   19 e: PA e PC •

    $default  reduce usando la regla 19 (e)


Estado 42

   13 e: e • SUM e
   13  | e SUM e •
   14  | e • MULT e
   15  | e • MEN e
   16  | e • AND e
   17  | e • OR e

    MULT  desplazar e ir al estado 36

    $default  reduce usando la regla 13 (e)


Estado 43

   13 e: e • SUM e
   14  | e • MULT e
   15  | e • MEN e
   15  | e MEN e •
   16  | e • AND e
   17  | e • OR e

    MULT  desplazar e ir al estado 36

    $default  reduce usando la regla 15 (e)


Estado 44

   13 e: e • SUM e
   14  | e • MULT e
   14  | e MULT e •
   15  | e • MEN e
   16  | e • AND e
   17  | e • OR e

    $default  reduce usando la regla 14 (e)


Estado 45

   13 e: e • SUM e
   14  | e • MULT e
   15  | e • MEN e
   16  | e • AND e
   16  | e AND e •
   17  | e • OR e

    SUM   desplazar e ir al estado 34
    MEN   desplazar e ir al estado 35
    MULT  desplazar e ir al estado 36

    $default  reduce usando la regla 16 (e)


Estado 46

   13 e: e • SUM e
   14  | e • MULT e
   15  | e • MEN e
   16  | e • AND e
   17  | e • OR e
   17  | e OR e •

    SUM   desplazar e ir al estado 34
    MEN   desplazar e ir al estado 35
    MULT  desplazar e ir al estado 36
    AND   desplazar e ir al estado 37

    $default  reduce usando la regla 17 (e)


Estado 47

   12 sent: VAR ASIG e PYM •

    $default  reduce usando la regla 12 (sent)
